--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,21 +15,10 @@ layout: layout
 
   <!-- TODO: bio here -->
   <section class="meta">
-    <h3>Discussion, links, and tweets</h3>
+    <h3>Bottom text</h3>
     <section class="copy">
-      <a href="https://twitter.com/{{ site.twitter }}" target="_blank">
         <img src="{{ site.github.owner_gravatar_url }}?s=142" height="50" width="50" />
-      </a>
-
-      <p>
-        I'm a developer at GitHub. <a href="https://twitter.com/{{ site.twitter }}" target="_blank">Follow me on Twitter</a>;
-        you'll enjoy my tweets. I take care to carefully craft each one. Or at least aim to make
-        you giggle. Or offended. One of those two&mdash; I haven't decided which yet.
-      </p>
-
-      <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
-      <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
-      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+        Thanks for reading!  If you'd like to say something, feel free to shoot me a message on <a href = https://instagram.com/logicku>Instagram</a>, Grindr, or [my first name] [at] [my university] [dot] edu.
     </section>
   </section>
 </section>
