What am I doing

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,11 @@
   </a>
 
   <section class="name">
-    <a href="/">
-      <span id="fname">{{ site.name|split:' '|first }}</span>
-      <span id="lname">{{ site.name|split:' '|last }}</span>
+	  <a href="/">
+      <div style="text-align: justify">
+	      <span id="fname">{{ site.name|split:' '|first }}</span>
+	      <span id="lname">{{ site.name|split:' '|last }}</span>
+      </div>
     </a>
   </section>
 
