--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,27 +1,27 @@
 <section class="sidebar">
   <a href="/" aria-label="Avatar">
-    <img src="{{ site.github.owner_gravatar_url }}?s=150" height="75" width="75" class="avatar" />
+    <img src="images/apple-touch-icon.png" alt="A photo of me" height="95" width="95" class="avatar" />
   </a>
 
   <section class="name">
-	  <a href="/">
       <div style="text-align: justify">
 	      <span id="fname">{{ site.name|split:' '|first }}</span>
-	      <span id="lname">{{ site.name|split:' '|last }}</span>
+	      <span id="lname">Tarvos {{ site.name|split:' '|last }}</span>
       </div>
-    </a>
   </section>
-
-  <section class="meta">
-    <a href="{{ site.github.owner_url }}" target="_blank" title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i></a>
-    <a href="https://instagram.com/{{ site.instagram }}" target="_blank" title="Follow me on Instagram" aria-label="Follow me on Instagram"><i class="fa fa-instagram"></i></a>
-    <a href="/atom.xml" title="Atom RSS feed" aria-label="Atom RSS feed"><i class="fa fa-rss"></i></a>
-  </section>
-
+  
+  <!--Subheadings--> 
   <section class="sections">
     <ul>
       <li><a href="/about.html">about</a></li>
       <li><a href="/">posts</a></li>
     </ul>
+  </section>
+  
+	<!--Contact menu-->
+  <section class="meta">
+    <a href="{{ site.github.owner_url }}" target="_blank" title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i> @tarvos on Github</a><br/>
+    <a href="https://instagram.com/{{ site.instagram }}" target="_blank" title="Follow me on Instagram" aria-label="Follow me on Instagram"><i class="fa fa-instagram"></i> @logicku on Instagram</a><br/>
+    <a href="/atom.xml" title="Atom RSS feed" aria-label="Atom RSS feed"><i class="fa fa-rss"></i> atom RSS feed?</a>
   </section>
 </section>
