--- a/css/base.scss
+++ b/css/base.scss
@@ -32,18 +32,18 @@ a {
     border-radius: 5px;
   }
   .name {
-    text-transform: uppercase;
-    margin: 10px 0 20px 0;
+    text-transform: lowercase;
+    margin: 10px 0 10px 0;
     #fname {
       padding-left: 1px;
       font-size: 23px;
-      letter-spacing: 5px;
+      letter-spacing: 1px;
       color: black;
     }
     #lname {
       font-size: 17px;
       font-weight: bold;
-      letter-spacing: 1px;
+      letter-spacing: 5px;
       color: black;
     }
   }
@@ -57,7 +57,7 @@ a {
     }
     margin-left: 4px;
     .icon {
-      margin-right: 6px;
+      margin-right: 20px;
     }
   }
   .sections {
@@ -85,7 +85,7 @@ a {
 
 .content {
   max-width: 650px;
-  margin-left: 110px;
+  margin-left: 120px;
   margin-right: 20px;
   margin-bottom: 50px;
   h1, h2, h3, h4 {
@@ -198,6 +198,7 @@ a {
       }
     }
   }
+
   .meta {
     margin: 30px 0;
     padding: 10px 0;
@@ -222,6 +223,7 @@ a {
       padding-left: 5px;
     }
   }
+
   .talk-design .color {
     div {
       float: left;
@@ -236,4 +238,5 @@ a {
       color: #fff;
     }
   }
+
 }
