--- a/_includes/top.html
+++ b/_includes/top.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>
     {% if page.title %}
-      {{ page.title }} &ndash;
+      {{ page.title }} |
     {% endif %}
     {{ site.name }}
   </title>
@@ -14,12 +14,11 @@
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-  <link rel="stylesheet" href="{{ site.url }}/css/base.scss" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="{{ site.url }}/css/base.css" type="text/css" media="screen, projection" />
   <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" type="text/css" />
-  <link media="only screen and (max-device-width: 480px)" href="{{ site.github.url }}/css/base.scss" type="text/css" rel="stylesheet" />
-  <link media="only screen and (device-width: 768px)" href="{{ site.github.url }}/css/base.scss" type="text/css" rel="stylesheet" />
+  <link media="only screen and (max-device-width: 480px)" href="{{ site.github.url }}/css/base.css" type="text/css" rel="stylesheet" />
+  <link media="only screen and (device-width: 768px)" href="{{ site.github.url }}/css/base.css" type="text/css" rel="stylesheet" />
   <link href='//fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-  <link rel="apple-touch-icon" href="{{ site.github.url }}/apple-touch-icon.png" />
 
   <script type="text/javascript" src="{{ site.github.url }}/js/application.js"></script>
 </head>
