--- a/_layouts/inclusive.html
+++ b/_layouts/inclusive.html
@@ -1,22 +1,20 @@
----
-layout: layout
----
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+{% include top.html %}
 
+<body>
+  {% include sidebar.html %}
+  
 <section class="content">
-  <h1>
-    <a href="{{ page.url }}">{{ page.title }}</a>
-  </h1>
+  <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
 
-  <section class="byline">
-    {{ page.date | date: "%B %e, %Y" }}
-  </section>
+	<section>
+		{{ content }}
+	</section>
+	
+	<section>  
+		{% include bot.html %}
+	</section>
+</body>
 
-  {{ content }}
-
-  <section class="content">
-    <h3>Bottom text</h3>
-    <section class="copy">
-	    <p>Thanks for reading!  If you'd like to say something, I usually check messages on Signal and iMessage <i>immediately</i>, at [my first name] [at] stanford [dot] edu <i>with a 3-hour latency</i>, and on Grindr <i>with a 72-hour latency</i>.</p>
-    </section>
-  </section>
-</section>
+</html>
