Wait, it's working?
Futzed with fonts.  Still need content lmao.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,17 +3,19 @@
   <a href="/" aria-label="Avatar"><img src="{{ site.baseurl }}/images/apple-touch-icon.png" alt="A photo of me" height="95" width="95" class="avatar"/></a>
 
 	<section class="name">
-	      <span id="fname">Jarku</span>
-	      <span id="lname">Tarvos Tang</span>
+		<a href="/">
+			<span id="fname">Jarku</span>
+		  <span id="lname">Tang</span>
+	  </a>
   </section>
   
   <section class="sections">
     <ul>
-      <li><a href="/about.html">about</a></li>
+      <li><a href="/about.html">about me</a></li>
       <li><a href="/">post index</a></li>
-      <li><a href="{{ site.github.owner_url }}" target="_blank" aria-label="Follow me on GitHub"><i class="fa fa-github"></i> github</a><br/></li>
-      <li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" aria-label="Follow me on Instagram"><i class="fa fa-instagram"></i> instagram</a><br/></li>
-      <li><a href="/atom.xml" aria-label="Atom RSS feed"><i class="fa fa-rss"></i> atom rss feed?</a></li>
+      <li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
+      <li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
+      <li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
     </ul>
   </section>
   
