--- a/_includes/bot.html
+++ b/_includes/bot.html
@@ -1,8 +1,5 @@
-<section class="content">
-    <h3>Bottom text</h3>
-    <section class="copy">
-	    <p>
-		    Thanks for reading!  If you'd like to say something, I usually check messages on Signal and iMessage <i>immediately</i>, at [my first name] [at] stanford [dot] edu <i>with a 3-hour latency</i>, and on Grindr <i>with a 72-hour latency</i>.
-			</p>
-    </section>
+ 
+<section class="bot">
+	<h3>Bottom text</h3>
+	<p> Thanks for reading!  If you'd like to say something, I usually check messages on Signal and iMessage <i>immediately</i>, at [my first name] [at] stanford [dot] edu <i>with a 3-hour latency</i>, and on Grindr <i>with a 72-hour latency</i>.</p>
 </section>
