--- a/_includes/top.html
+++ b/_includes/top.html
@@ -9,16 +9,12 @@
 
   <meta name="author" content="{{ site.name }}" />
   <meta name="description" content="{{ site.description }}" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+  <link rel="stylesheet" href="/css/base.css">
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-  <link rel="stylesheet" href="{{ site.url }}/css/base.css" type="text/css" media="screen, projection" />
-  <link rel="stylesheet" href="{{ site.url }}/css/pygments.css" type="text/css" />
-  <link media="only screen and (max-device-width: 480px)" href="{{ site.github.url }}/css/base.css" type="text/css" rel="stylesheet" />
-  <link media="only screen and (device-width: 768px)" href="{{ site.github.url }}/css/base.css" type="text/css" rel="stylesheet" />
-  <link href='//fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
-
+  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Roboto:300" rel="stylesheet">
+  
   <script type="text/javascript" src="{{ site.github.url }}/js/application.js"></script>
 </head>
