Markdown! Pages folder!
Guess I can't move 404 out of root, but at least we're in Markdown now >:)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <section class="sidebar">
   
-  <a href="/" aria-label="Avatar"><img src="{{ site.baseurl }}/images/apple-touch-icon.png" alt="A photo of me" height="95" width="95" class="avatar"/></a>
+  <a href="/"><img src="{{ site.baseurl }}/images/apple-touch-icon.png" alt="A photo of me" height="95" width="95" /></a>
 
 	<section class="name">
 		<a href="/">
@@ -9,9 +9,9 @@
 	  </a>
   </section>
   
-  <section class="sections">
+  <section class="links">
     <ul>
-      <li><a href="/about.html">about me</a></li>
+      <li><a href="/pages/about.html">about me</a></li>
       <li><a href="/">post index</a></li>
       <li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
       <li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
