--- a/_includes/bot.html
+++ b/_includes/bot.html
@@ -1,5 +1,5 @@
  
 <section class="bot">
-	<h3>Bottom text</h3>
-	<p> Thanks for reading!  If you'd like to say something, I usually check messages on Signal and iMessage <i>immediately</i>, at [my first name] [at] stanford [dot] edu <i>with a 3-hour latency</i>, and on Grindr <i>with a 72-hour latency</i>.</p>
+	<h3>You're browsing <a href="/">tarvos.github.io</a>.</h3>
+	<p>Thanks for reading!  If you'd like to reach me, I usually check messages on Signal and iMessage <i>immediately</i>, at [my first name] [at] stanford [dot] edu with a <i>3-hour latency</i>, and on Grindr with a <i>72-hour latency</i>.   &#x1F1E8;&#x1F1E6; &#x1f3f3;&#xfe0f;&#x200d;&#x1f308; </p>
 </section>
