Now a lil bit solarized.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,22 +1,26 @@
 <section class="sidebar">
-  
-  <a href="/"><img src="{{ site.baseurl }}/images/apple-touch-icon.png" alt="A photo of me" height="95" width="95" /></a>
+
+	<section class="avatar">
+		<a href="/">
+			<img src="{{ site.baseurl }}/images/apple-touch-icon.png" alt="A photo of me" />
+		</a>
+	</section>
 
 	<section class="name">
 		<a href="/">
 			<span id="fname">Jarku</span>
-		  <span id="lname">Tang</span>
-	  </a>
-  </section>
+			<span id="lname">Tang</span>
+		</a>
+	</section>
   
-  <section class="links">
-    <ul>
-      <li><a href="/pages/about.html">about me</a></li>
-      <li><a href="/">post index</a></li>
-      <li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
-      <li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
-      <li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
-    </ul>
-  </section>
+	<section class="links">
+		<ul>
+			<li><a href="/pages/about.html">about me</a></li>
+			<li><a href="/">post index</a></li>
+			<li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
+			<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
+			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
+		</ul>
+	</section>
   
 </section>
