--- a/_includes/top.html
+++ b/_includes/top.html
@@ -14,7 +14,7 @@
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Roboto:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre|Spectral|Oxygen+Mono" rel="stylesheet">
   
   <script type="text/javascript" src="{{ site.github.url }}/js/application.js"></script>
 </head>
