--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,5 +1,16 @@
 <head>
   <meta charset="utf-8">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122320548-1">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-122320548-1');
+  </script>
+
   <title>
     {% if page.title %}
       {{ page.title }} |
