--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,6 +18,7 @@
 			<li><a href="/pages/about.html">about me</a></li>
 			<li><a href="/">post index</a></li>
 			<li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
+			<li><a href=https://twitter.com/"{{ site.twitter }}" target="_blank" /><i class="fa fa-twitter"></i> twitter</a></li>
 			<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
 			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
 		</ul>
