Added password protection for personal journal.

--- a/_includes/bot.html
+++ b/_includes/bot.html
@@ -1,5 +1,6 @@
- 
+
 <section class="bot">
-	<h3>Looking for something you can't find?  Try clearing your cache.</h3>
-	<p>You're browsing <a href="/">tarvos.github.io</a>, a static website powered by <a href="https://jekyllrb.com">Jekyll</a>.  Thanks for reading!  If you'd like to reach me, I can be messaged on <a href="https://signal.org">Signal</a> at my California number or on WhatsApp at my UK number, emailed at @stanford.edu at [my first name], or pursued on Grindr if you're lucky.  &#x1F1E8;&#x1F1E6; &#x1f3f3;&#xfe0f;&#x200d;&#x1f308; </p>
+<p>
+  &#169; Jarku Tarvos Tang  ::  jarku [at] alumni [dot] stanford [dot] edu  ::  &#x1F1E8;&#x1F1E6; &#x1f3f3;&#xfe0f;&#x200d;&#x1f308;
+</p>
 </section>
