--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,4 +8,8 @@ layout: inclusive
 
 <section class="entry">
 	{{content}}
+
+	<span text-align="center">
+		<a href="javascript:history.back()">Back</a>
+	</span>
 </section>
