Revert "Added password protection for personal journal."
This reverts commit e150b857f6c0dca29a93ec00ccb776692639fdaf.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,14 +12,16 @@
 			<span id="lname">Tang</span>
 		</a>
 	</section>
-
+  
 	<section class="links">
 		<ul>
+			<li><a href="/pages/about.html">about me</a></li>
+			<li><a href="/">post index</a></li>
 			<li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
-			<li><a href=https://twitter.com/{{ site.twitter }} target="_blank" /><i class="fa fa-twitter"></i> twitter</a></li>
+			<li><a href=https://twitter.com/"{{ site.twitter }}" target="_blank" /><i class="fa fa-twitter"></i> twitter</a></li>
 			<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
-			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a>></li>
+			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
 		</ul>
 	</section>
-
+  
 </section>
