--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,19 +1,16 @@
 <section class="sidebar">
-
-	<section class="avatar">
+	<section id="avatar">
 		<a href="/">
 			<img src="{{ site.baseurl }}/assets/apple-touch-icon.png" alt="A photo of me" />
 		</a>
 	</section>
-
-	<section class="name">
+	<section id="name">
 		<a href="/">
 			<span id="fname">Jarku</span>
 			<span id="lname">Tang</span>
 		</a>
 	</section>
-  
-	<section class="links">
+	<nav>
 		<ul>
 			<li><a href="/pages/about.html">about me</a></li>
 			<li><a href="/">post index</a></li>
@@ -22,6 +19,5 @@
 			<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
 			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
 		</ul>
-	</section>
-  
+	</nav>
 </section>
