--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -6,6 +6,6 @@ layout: inclusive
 	<span>{{ page.date | date: "%A %-d %B %Y" }}</span>
 </section>
 
-<section class="entry">
+<article class="entry">
 	{{content}}
-</section>
+</article>
