--- a/css/base.scss
+++ b/css/base.scss
@@ -13,6 +13,7 @@ body {
   max-width: 700px;
   margin: 0 30px 20px 154px;
 }
+
 h1 {
   font-family: 'Oxygen Mono', 'Andale Mono', monospace;
   font-size: 36px;
@@ -59,8 +60,24 @@ nav {
     padding: 0 0 0 0;
   }
 }
+
 footer {
   font-size: 14px;
+  img {
+    height: 18px;
+    vertical-align: text-bottom;
+  }
+}
+
+.license-img {
+  float: left;
+  padding: 1px;
+}
+
+.license-text::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .sidebar {
