--- a/_includes/bot.html
+++ b/_includes/bot.html
@@ -1,4 +1,18 @@
-<h3>Looking for something you can't find?  Try clearing your cache.</h3>
+<div class="license-text" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+	<h3>
+		<div class="license-img">This work by Jarku Tarvos Tang is licensed under
+			<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0">
+				CC BY-NC-SA 4.0</a>.
+		</div>
+		<div class="license-img"></div>
+		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"/></div>
+		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg"/></div>
+		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg"/></div>
+		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg"/></div>
+	</h3>
+</div>
+
 <address>
-	<a href="/">tarvos.github.io</a> is a static website powered by <a href="https://jekyllrb.com">Jekyll</a>.
+	<a href="/">tarvos.github.io</a> is a static website powered by
+	<a href="https://jekyllrb.com">Jekyll</a>.
 </address>
