--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,23 +1,21 @@
-<section class="sidebar">
-	<section id="avatar">
-		<a href="/">
-			<img src="{{ site.baseurl }}/assets/apple-touch-icon.png" alt="A photo of me" />
-		</a>
-	</section>
-	<section id="name">
-		<a href="/">
-			<span id="fname">Jarku</span>
-			<span id="lname">Tang</span>
-		</a>
-	</section>
-	<nav>
-		<ul>
-			<li><a href="/pages/about.html">about me</a></li>
-			<li><a href="/">post index</a></li>
-			<li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
-			<li><a href=https://twitter.com/"{{ site.twitter }}" target="_blank" /><i class="fa fa-twitter"></i> twitter</a></li>
-			<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
-			<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
-		</ul>
-	</nav>
-</section>
+<div id="avatar">
+	<a href="/">
+		<img src="{{ site.baseurl }}/assets/apple-touch-icon.png" alt="A photo of me" />
+	</a>
+</div>
+<div id="name">
+	<a href="/">
+		<span id="fname">Jarku</span>
+		<span id="lname">Tang</span>
+	</a>
+</div>
+<nav>
+	<ul>
+		<li><a href="/pages/about.html">about me</a></li>
+		<li><a href="/">post index</a></li>
+		<li><a href="{{ site.github.owner_url }}" target="_blank" /><i class="fa fa-github"></i> github</a></li>
+		<li><a href=https://twitter.com/"{{ site.twitter }}" target="_blank" /><i class="fa fa-twitter"></i> twitter</a></li>
+		<li><a href="https://instagram.com/{{ site.instagram }}" target="_blank" /><i class="fa fa-instagram"></i> instagram</a></li>
+		<li><a href="/atom.xml" /><i class="fa fa-rss"></i> atom rss?</a></li>
+	</ul>
+</nav>
