--- a/_includes/bot.html
+++ b/_includes/bot.html
@@ -1,9 +1,6 @@
 <div class="license-text" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 	<h3>
-		<div class="license-img">This work by Jarku Tarvos Tang is licensed under
-			<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0">
-				CC BY-NC-SA 4.0</a>.
-		</div>
+		<div class="license-img">This work by Jarku Tarvos Tang is licensed under <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0">CC BY-NC-SA 4.0</a>.</div>
 		<div class="license-img"></div>
 		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg"/></div>
 		<div class="license-img"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg"/></div>
