--- a/_layouts/inclusive.html
+++ b/_layouts/inclusive.html
@@ -17,15 +17,23 @@
   </head>
 
   <body>
-    <header>
-      {% include sidebar.html %}
-      <h1>{{ page.title }}</h1>
-    </header>
-    <main>
-  	   {{ content }}
-    </main>
-    <footer>
-      {% include bot.html %}
-    </footer>
+    <div id="display">
+      <div id="grid-container">
+        <div id="sidebar">
+          {% include sidebar.html %}
+        </div>
+        <div id="container">
+          <header>
+            <h1>{{ page.title }}</h1>
+          </header>
+          <main>
+        	   {{ content }}
+          </main>
+          <footer>
+            {% include bot.html %}
+          </footer>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
