--- a/css/base.scss
+++ b/css/base.scss
@@ -3,17 +3,14 @@
 ---
 @charset "UTF-8";
 
-body {
+* {
   -webkit-font-smoothing: antialiased;
-  margin: 0;
-  padding: 0;
+}
+body {
   font-family: 'Spectral', sans-serif;
   font-size: 15px;
   color: #002b36;  //base03
-  max-width: 700px;
-  margin: 0 30px 20px 154px;
 }
-
 h1 {
   font-family: 'Oxygen Mono', 'Andale Mono', monospace;
   font-size: 36px;
@@ -60,7 +57,6 @@ nav {
     padding: 0 0 0 0;
   }
 }
-
 footer {
   font-size: 14px;
   img {
@@ -69,21 +65,19 @@ footer {
   }
 }
 
-.license-img {
-  float: left;
-  padding: 1px;
+#display {
+  display: block;
 }
 
-.license-text::after {
-  content: "";
-  clear: both;
-  display: table;
+#grid-container {
+  display: grid;
+  width: 70%;
+  margin: auto;
+  grid-template-columns: 100px auto;
+  grid-gap: 10px;
 }
 
-.sidebar {
-  position: fixed;
-  left: 25px;
-  top: 15px;
+#sidebar {
   width: 95px;
   a {
     color: white;
@@ -115,6 +109,20 @@ footer {
       text-transform: uppercase;
     }
   }
+}
+
+#container {
+  width: 100%;
+}
+
+.license-img {
+  float: left;
+  padding: 1px;
+}
+.license-text::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 //dates on posts only
