Descriptive file rename

--- a/_layouts/inclusive.html
+++ b/_layouts/inclusive.html
@@ -30,7 +30,7 @@
         	   {{ content }}
           </main>
           <footer>
-            {% include bot.html %}
+            {% include footer.html %}
           </footer>
         </div>
       </div>
